solar-system/kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
  name: solar-system
  namespace: ${NAMESPACE}
spec:
    ingressClassName: nginx
    rules:
    - host: solar-system-${NAMESPACE}.${INGRESS_IP}.nip.io
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
